# puzzlebot-navigation

./: .gitignore
Reto4-Vision/final_design/: package.xml  setup.cfg  setup.py
Reto4-Vision/final_design/launch/: design_launch.py
Reto5-Vision/: cameraman.py  ducktrack.py  extractimages.py  homografia.py  reto5.py  tracked_duck.avi  tracker.py
final_te3002b/: CMakeLists.txt  package.xml  setup.cfg
final_te3002b/final_te3002b/: line_follower.py  state_machine.py  traffic_light.py  traffic_signs.py
final_te3002b/src/: camera.cpp
runs/detect/train/: args.yaml  results.csv
runs_signs/detect/train/: args.yaml  results.csv
runs_signs/detect/train2/: args.yaml  results.csv
runs_signs/detect/train3/: args.yaml
runs_signs/detect/train4/: args.yaml  results.csv
src/Challenge 4 - Vision/: minichallenge.ino
src/HalfTerm/reto_closedloop/: package.xml
src/custom_interfaces/: package.xml
src/custom_interfaces/srv/: SetProcessBool.srv
src/final_te3002b/: setup.py
src/final_te3002b/final_te3002b/: buzzer.py  line_follower.py  odometry.py  state_machine.py  traffic_light.py  traffic_signs.py
src/final_te3002b/launch/: track.launch.py
src/line_follower/: CMakeLists.txt  setup.py
src/line_follower/launch/: follower.launch.py
src/line_follower/line_follower/: line_follower.py  prueba1.py
src/line_followerxime/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/line_followerxime/launch/: follower.launch.py
src/line_followerxime/line_followerxime/: image_capturer.py  light_detector.py  line_follower.py  prueba_miaaa.py  pruebas_naho.py  testmodel.py
src/puzzlebot_control/: package.xml  setup.py
src/puzzlebot_control/launch/: path_ctrl_close.launch.py
src/puzzlebot_control/msg/: GoalPose.msg
src/reto_closedloop/: package.xml  setup.py
(+9 files in other folders)
